--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     }
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "electron-dl": "^3.5.0",
+    "node-downloader-helper": "^2.1.9"
   }
 }
