--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "ezfps.app",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "electron .",
+    "build": "tsc",
+    "start": "npm run build && electron ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +16,16 @@
     "electron-builder": "^24.4.0"
   },
   "build": {
+    "files": [
+      "dist/*.js",
+      "package.json",
+      "index.html",
+      "icon.png"
+      
+    ],
+    "directories": {
+      "output": "build"
+    },
     "appId": "ezfps.project",
     "productName": "ezfps",
     "asar": true,
@@ -21,11 +33,21 @@
       "target": "nsis",
       "publisherName": "ezfps.project",
       "icon": "icon.png"
+    },
+    "linux": {
+      "target": [
+        "appImage",
+        "zip"
+      ],
+      "description": "Best app for PC optimizing",
+      "category": "Utility",
+      "icon": "icon.png"
     }
   },
   "dependencies": {
     "axios": "^1.4.0",
     "electron-dl": "^3.5.0",
-    "node-downloader-helper": "^2.1.9"
+    "node-downloader-helper": "^2.1.9",
+    "typescript": "^5.2.2"
   }
 }
