--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"mode":"medium","dota_path":"~/.steam/steam/SteamApps/common/dota 2 beta","cs_path":"~/.steam/steam/SteamApps/common/Counter-Strike Global Offensive"}
+{"mode":"easy","dota_path":"/Users/$USER/Library/Application Support/Steam/steamapps/common/dota 2 beta","cs_path":"/Users/$USER/Library/Application Support/Steam/steamapps/common/Counter-Strike Global Offensive"}
