--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"mode":"hard","dota_path":"~/.steam/steam/SteamApps/common/dota 2 beta","cs_path":"~/.steam/steam/SteamApps/common/Counter-Strike Global Offensive"}
+{"mode":"easy","dota_path":"C:/Program Files (x86)/Steam/steamapps/common/dota 2 beta","cs_path":"C:/Program Files (x86)/Steam/steamapps/common/Counter-Strike Global Offensive"}
